css/app.css
body {
/*  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;*/
/*  letter-spacing: -0.02em;*/ 
/*  font-weight: 300;*/
  font-size: 16px;
  padding-top: 50px;
  padding-bottom: 0;
  color: #525254;
}
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-weight: bold;
}
.navbar > .container .navbar-brand {
  border: 0;
  font: 0/0 a;
  text-shadow: none;
  color: transparent;
  background: url('../images/logo-v3-gray-35h.png') no-repeat;
  width: 125px;
  height: 35px;
  margin-left: 0;
  margin-top: 6px;
  margin-right: 15px;
}
a.navbar-brand:hover {
  opacity: 0.7;
}
.container.content {
  margin-top: 40px;
}
.container.content h1.page-header {
  margin-top: 0;
}
.container.content + footer {
  margin-top: 40px;
}
.content article:first-of-type h2 {
  margin-top: 0px;
}
/*.page-home .navbar > .container .navbar-brand {
  background: url('../images/logo-v3-white-35h.png') no-repeat;
}
.page-home .navbar-default {
  background-color: #348eda;
  color: #fff;
  border-color: #469be2;
}
.page-home .navbar-default li>a {
  color: #eee;
}
.page-home .navbar-default .navbar-nav>.active>a, .page-home .navbar-default .navbar-nav>.active>a:hover, .page-home .navbar-default .navbar-nav>.active>a:focus {
color: #eee;
background-color: #469be2;
}
.page-home .navbar-default .navbar-nav>li>a:hover, .page-home .navbar-default .navbar-nav>li>a:focus, .page-home .navbar-default .navbar-nav>.active>a:hover {
  color: #fff;
  background-color: #469be2;
}
*/
.jumbotron {
  background: #348eda url('../images/home-globe.png') no-repeat right -400px center;
  margin-bottom: 0;
  padding-bottom: 30px;
  color: #fff;
}
.jumbotron h1, section h1 {
  font-weight: bold;
  line-height: 1;
  margin-bottom: 40px;
}
section h1 {
  margin-bottom: 40px;
}
.jumbotron h1 small, section h1 small {
  font-size: inherit;
  font-weight: 200;
  color: #ddd;
  display: block;
}
.jumbotron a.btn-default {
  margin-top: 20px;
  margin-bottom: 20px;
  padding: 20px;
  font-size: 26px;
  font-weight: 200;
  background: inherit;
  color: #fff;
}
.jumbotron a.btn-default:hover {
  color: #348eda;
  background-color: #fff;
  border-color: #348eda;
}
.jumbotron p.lead, .enterprise p.lead {
  font-size: 26px;
}
small.super {
  vertical-align: super;
}
.jumbotron a {
  color: #fff;
}
.jumbotron a.textlink {
  border-bottom: #fff 2px dotted;
  padding-bottom: 4px;
}
.jumbotron a.textlink:hover {
  text-decoration: none;
  border-bottom: solid;
}
/*#vodlogos {
  background: #e67d25;
  color: #fff;
  padding-top: 60px;
  padding-bottom: 100px;
}
*/
#vodlogos span {
  border: 0;
  font: 0/0 a;
  text-shadow: none;
  color: transparent;
  background: url('../images/vod-logos.png') no-repeat;
  height: 40px;
  width: 100px;
  display: inline-block;
  opacity: 1;
  margin: 10px;
  opacity: 0.7;
}
#vodlogos #itunes   { background-position: 0px 0px; width: 90px; }
#vodlogos #hulu     { background-position: 0px -40px; width: 70px; }
#vodlogos #amazon   { background-position: 0px -80px; width: 114px; }
#vodlogos #netflix { background-position: 0px -120px; width: 70px; }
#vodlogos #viewster { background-position: 0px -160px; width: 100px; }
#vodlogos #huluplus { background-position: 0px -200px; width: 120px; }
#vodlogos #google { background-position: 0px -240px; width: 130px; }
#vodlogos #indiereign { background-position: 0px -280px; width: 100px; }
#vodlogos #snagfilms { background-position: 0px -320px; width: 110px; }
#vodlogos #fandor { background-position: 0px -360px; width: 130px; }
#vodlogos #lovefilm { background-position: 0px -400px; width: 80px; }
#vodlogos #redbox { background-position: 0px -440px; width: 90px; }
#vodlogos #mgo { background-position: 0px -480px; width: 40px; }
#vodlogos #roku { background-position: 0px -520px; width: 70px; }
#vodlogos #kinopto { background-position: 0px -560px; width: 100px; }
#vodlogos #vudu { background-position: 0px -600px; width: 60px; }
#vodlogos #canalplay { background-position: 0px -640px; width: 100px; }
#vodlogos #viaway { background-position: 0px -680px; width: 70px; }
#vodlogos #indieflix { background-position: 0px -720px; width: 100px; }
#vodlogos #cineclick { background-position: 0px -760px; width: 50px; }

h2 img {
  margin-right: 10px;
}
section {
  padding-top: 40px;
  padding-bottom: 40px;
}
section:nth-of-type(3n+2) {
  background-color: #eee;   
}
section:nth-of-type(3n) {
  background-color: #406E74; /* #e67d25 #4C5679; #36426B */
  color: #fff;
  letter-spacing: 0.02em;
}
section:nth-of-type(3n) a {
  color: #acdbe4;
}
section:last-of-type {
/*  min-height: 100vh; */
}
div#terms-intro {
  background-color: #eee;
}
.btn ~ p {
  margin-top: 20px;
}
.details > * {
  margin-top: 0;
}
.pricing img {
  margin: 40px auto;
}
.nav.nav-stacked.sidenav li>a {
  padding-top: 6px;
  padding-bottom: 6px;
}
.meta {
  margin-bottom: 30px;
}
.meta small {
  color: #999;
}
  
.steps {
  display: inline-block;
  font-weight: bold;
  text-align: center;
  padding: 10px;
  width: 50px;
  background: #E2E2E2;
  color: #444;
/*
  margin: 0px 5px 0px 0;
  float: left;
  font-size: 20px;
  line-height: 35px;
  -moz-border-radius: 35px;
  -webkit-border-radius: 35px;
  -khtml-border-radius: 35px;
  border-radius: 35px;
*/
}

.howitworks img, .enterprise img {
  margin-bottom: 20px;
}

a.anchor {
  display: block;
  position: relative;
  top: -51px;
  visibility: hidden;
}
section.enterprise {
  background-color: #0c132e; /* #1B2122 #406E74 #4c858c #012B31 */
  color: #fff;
  letter-spacing: 0.03em;
}

section.enterprise h1 small {
  color: #ccc;
}
section#features h1 {
  font-size: 48px;
  letter-spacing: -2px;
  margin-bottom: 20px;
}
section#features {
/*  background: url('../images/blueglobe.jpg') #fff no-repeat top 10px;*/
/*  background: #fff;
*/  position: relative;
  overflow: hidden;
}
#globe {
  position: absolute;
  top: -10px;
}
footer {
  color: #888;
  background-color: #f8f8f8;
  padding-top: 30px;
  padding-bottom: 30px;
  border-top: 1px solid #e7e7e7;
  min-height: 60px;
  text-align: center;
}
footer a {
  color: #777;
}
footer a:hover {
  color: #333;
}
footer ul>li a:hover i {
/*  opacity: 0.7;*/
}
footer ul {
  list-style: none;
  padding-left: 0;
}
footer ul>li {
  display: inline;
  padding-left: 10px;
  padding-right: 10px;
}
footer ul>li:first-child {
  padding-left: 0;
}
footer ul>li:last-child {
  padding-right: 0;
}
/* This gets Google to fall into place */
.social {
	font-size: 1px;
  padding: 0;
  line-height: 40px;
}

/* This gets Facebook to fall into place */
.social iframe {
	vertical-align: middle;
}

/* Set an optional width for your button wrappers */
.social span {
	display: inline-block;
	width: 180px;
}
.social .twitter {
  width: 110px;
}
.social .twitter-follow {
  width: 150px;
}
.social .facebook {
  width: 90px;
}
/* Adjust the widths individually if you like */
.social .google {
	width: 75px;
}
.well h3 {
  margin-top: 0;
}
@media (min-width: 768px) {
  .jumbotron h1 {
    font-size: 75px;
    letter-spacing: -3px;
  }
  section h1 {
    font-size: 64px;
    letter-spacing: -3px;
  }
  .lead {
    font-size: 18px;
  }
}
@media all and (-webkit-min-device-pixel-ratio: 1.5) {
  .navbar > .container .navbar-brand {
    background: url('../images/logo-v3-gray-35h@2x.png') no-repeat;
    background-size: 125px 35px;
  }
}
a[data-toggle="tooltip"] {
  color: inherit;
  border-bottom: 1px dashed #000;
  text-decoration: none;
}
.tag {
  text-transform: uppercase;
  font-weight: 400;
  padding: .4em .6em .3em;
}
.tag span {
  vertical-align: super;
  font-size: 1rem;
}
#tag-box {
  line-height: 2;
}
body.page-tags p.singletag {
  margin: 20px 0 10px;
}
body.page-tags ul.posts {
  list-style: none;
  margin: 0;
  padding: 0;
}
body.page-tags ul.posts time {
  color: #888;
}
.alert>ul {
  margin-bottom: inherit;
}
ol ol {
  margin-bottom: 10px; /* undo Bootstrap */
}
li ol {
/*   margin-bottom: 0px; /* instead, I think that's what they meant */
}
body.page-terms .container.section {
  padding-bottom: 20px;
}
.jumbotron .container, section .container {
  padding-bottom: 0px;
}

